--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
   <title>Frontend Mentor | Base Apparel coming soon page</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
     .attribution a {
       color: hsl(228, 45%, 44%);
     }
@@ -49,7 +44,7 @@
 
   <!-- Footer -->
   <footer>
-    <p class="attribution">
+    <p class="attribution" style="font-size:11px;text-align:center;">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/Muchiri400">Muchiri</a>.
     </p>
